# MD5

./: CMakeLists.txt
src/: conf.h.in
